--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ instance/*
 !instance/.gitignore
 .webassets-cache
 .env
+testSQLAlchemy
+testClients
+testMicroservice
 
 ### Flask.Python Stack ###
 # Byte-compiled / optimized / DLL files
